themes/skins/niecalumni.css
/* ... */
label {
  font-size: 1.3em;
  position: absolute;
  z-index: 100;
  cursor: pointer;
  width: 200px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  top: 60px;
  left: 15px;
}

.radio {
  display: none;
}

.radio:checked + .relative label {
  cursor: auto;
  width: 400px;
  transition: width 0.3s linear 0.2s;
}
.radio:checked + .relative .circle {
  background: #f98262;
}
.radio:checked ~ .content {
  max-height: 180px;
  border-color: #eee9dc;
  width: 400px;
}
.radio:checked ~ .content p {
  max-height: 200px;
  color: #eee9dc;
  transition: color 0.3s linear 0.3s;
}

